--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=8080
+MONGODB_ATLAS=mongodb+srv://user_node_cafe:Huk8ezpAAU5SQFWR@miclustercafe.bczio.mongodb.net/cafeDB?retryWrites=true&w=majority&appName=MiClusterCafe
+USER=user_node_cafe
+PASS=Huk8ezpAAU5SQFWR
